# omatunes

./: .gitignore  Cargo.toml  README.md  USER_MANUAL.md
scripts/: migrate_stats.py  omatunes-sync.service  omatunes_text.py
src/: app.rs  config.rs  db.rs  locale.rs  main.rs  paths.rs  stats.rs
src/audio/: mpris.rs  player.rs  spectrum.rs
src/ui/: icons.rs  lyrics_shift.rs  mod.rs  theme.rs
src/ui/components/: autocomplete.rs  controls.rs  mod.rs  playlist_dialog.rs  settings_dialog.rs  smart_playlist_builder.rs  tag_editor.rs
src/ui/views/: charts.rs  library.rs  mod.rs  player.rs  playlist.rs  spectrum.rs
