[package]
name = "omatunes"
version = "0.9.5-beta"
edition = "2021"

[dependencies]
# GUI
iced = { version = "0.13", features = ["image", "canvas", "tokio", "lazy"] }

# Audio — decode
symphonia = { version = "0.5", features = ["all"] }

# Audio — output
cpal = "0.15"

# Tags / metadata
lofty = "0.21"

# MPRIS2 (D-Bus)
mpris-server = "0.8"

# FFT for spectrum visualizer
rustfft = "6.2"

# Directory scanner
walkdir = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Image processing (album covers)
image = "0.25"

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File dialogs (native OS folder picker)
rfd = "0.15"

# Async traits
async-trait = "0.1"

# Random number generator (shuffle)
rand = "0.8"

# Date and time for Recently Played
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
